services/email-service/deployments/email-service/templates/email-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: email-service
  labels:
    istio-injection: enabled
