services/email-service/deployments/email-service/templates/email-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-service-service
  name: email-service-service
spec:
  ports:
    - name: grpc
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: email-service
